# FlipStack

./: .gitignore  License  README.md  Readme.md  build_appimage.sh  dashboard_view.py  data_engine.py  deck_editor.py  flipstack.sh  io.github.dagaza.FlipStack.desktop  io.github.dagaza.FlipStack.metainfo.xml  io.github.dagaza.FlipStack.yml  io.github.username.FlipStack.desktop  main.py  performance_view.py  pyproject.toml  study_session.py
.github/workflows/: build.yml
